# python-project-83

./: .build.sh.swp  .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: pyci.yml
code/: __init__.py
code/page_analyzer/: __init__.py  app.py  database.py
code/page_analyzer/templates/: urls.html
hexlet-code/page_analyzer/: __init__.py  app.py
hexlet_code/page_analyzer/: app.py  database.py
hexlet_code/page_analyzer/templates/: index.html  url.html
page_analyzer/: app.py  database.py  url_repository.py
page_analyzer/page_analyzer/: app.py
page_analyzer/page_analyzer/templates/: index.html
page_analyzer/templates/: base.html
